--- a/src/stylesheet/index.css
+++ b/src/stylesheet/index.css
@@ -1,4 +1,11 @@
-@import url("https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap");
+@import url(https://fonts.googleapis.com/css2?family=Rokkitt:wght@100;200;300;400;500;531;600;700;800;900&display=swap);
+@import url(https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@100;300;400;500;700;900&display=swap);
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer base {
+  html {
+    font-family: Noto + Sans, Rokkitt, sans-serif;
+  }
+}
