--- a/src/stylesheet/index.css
+++ b/src/stylesheet/index.css
@@ -9,3 +9,77 @@
     font-family: Noto + Sans, Rokkitt, sans-serif;
   }
 }
+
+.grid-template-areasImages {
+  grid-template-columns: repeat(3, 1fr);
+  grid-template-rows: repeat(4, 1fr);
+  grid-template-areas:
+    'image-1 image-1 image-2'
+    'image-1 image-1 image-2'
+    'image-4 image-3 image-2'
+    'image-5 image-3 image-2';
+}
+.grid-area1 {
+  grid-area: image-1;
+}
+.grid-area2 {
+  grid-area: image-2;
+}
+.grid-area3 {
+  grid-area: image-3;
+}
+.grid-area4 {
+  grid-area: image-4;
+}
+.grid-area5 {
+  grid-area: image-5;
+}
+.grid-area6 {
+  grid-area: image-6;
+}
+
+/* スクロールダウンの位置 */
+.scroll {
+  margin-inline: auto;
+  position: relative;
+  font-size: 10px;
+  color: #999;
+}
+/* マウスホイール */
+.scroll::before {
+  animation: 4s scroll infinite;
+  background: #999;
+  border-radius: 3px;
+  content: '';
+  height: 10px;
+  left: 0;
+  margin: auto;
+  position: absolute;
+  right: 0;
+  width: 4px;
+}
+/* マウス */
+.scroll::after {
+  border: 2px solid #999;
+  border-radius: 20px;
+  content: '';
+  display: block;
+  height: 32px;
+  margin-inline: auto;
+  margin-top: 2px;
+  width: 20px;
+}
+/* アニメーション */
+@keyframes scroll {
+  0% {
+    opacity: 0;
+    top: 40%;
+  }
+  50% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 0;
+    top: 70%;
+  }
+}
